tests/error/match_error/07pattern_no_args1.py
from guppylang import guppy

@guppy.struct
class Point:
    x: int
    y: int

@guppy
def main(p: Point, x: int) -> None:
    match p:
        case Point():
            z = 66

main.check()

#TODO: NICOLA do the same for enums